--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="save">Save</string>
     <string name="author">Author</string>
     <string name="url_is_not_valid">Url is not valid</string>
+    <string name="country">Country</string>
 </resources>
