--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="country">Country</string>
     <string name="sure_to_delete">Are you sure to delete?</string>
     <string name="yes">Yes</string>
+    <string name="title_app_needs_permission">Permission needed</string>
+    <string name="backup_permission_explanation">App needs permission to store backup</string>
+    <string name="restore_permission_explanation">App needs permission to restore backup</string>
 </resources>
