--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="title_app_needs_permission">Permission needed</string>
     <string name="backup_permission_explanation">App needs permission to store backup</string>
     <string name="restore_permission_explanation">App needs permission to restore backup</string>
+    <string name="title_edit">edit</string>
+    <string name="delete">delete</string>
 </resources>
