--- a/feature/entity-list/list-ui/src/main/res/values/strings.xml
+++ b/feature/entity-list/list-ui/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="restore_permission_explanation">App needs permission to restore backup</string>
     <string name="title_edit">edit</string>
     <string name="delete">delete</string>
+    <string name="internet_search">Internet Search</string>
 </resources>
