--- a/feature/entity-list/list-ui/src/main/res/values/strings.xml
+++ b/feature/entity-list/list-ui/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="delete">delete</string>
     <string name="internet_search">Internet Search</string>
     <string name="countries_placeholder">"Countries: %s"</string>
+    <string name="years_placeholder">"Year: %d"</string>
 </resources>
