Feature: move entity to other category

--- a/feature/entity-list/list-ui/src/main/res/values/strings.xml
+++ b/feature/entity-list/list-ui/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="internet_search">Internet Search</string>
     <string name="countries_placeholder">"Countries: %s"</string>
     <string name="years_placeholder">"Year: %d"</string>
+    <string name="move_to">Move to...</string>
 </resources>
