--- a/feature/entity-list/list-ui/src/main/res/values/strings.xml
+++ b/feature/entity-list/list-ui/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Highlights</string>
-    <string name="tab_text_1">Не-хрень</string>
-    <string name="tab_text_2">Хрень</string>
     <string name="genre">Genre</string>
     <string name="name">Name</string>
     <string name="year">Year</string>
@@ -23,4 +21,7 @@
     <string name="move_to">Move to…</string>
     <string name="error_fetching_local_data">Error fetching local data</string>
     <string name="empty_list_message">You don\'t have any %s added</string>
+    <string name="clear_image_cache">Clear image cache</string>
+    <string name="title_enable_suggestions">Enable suggestions</string>
+    <string name="image_cache_cleared">Image cache cleared</string>
 </resources>
