--- a/feature/entity-list/list-ui/src/main/res/values/strings.xml
+++ b/feature/entity-list/list-ui/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="clear_image_cache">Clear image cache</string>
     <string name="title_enable_suggestions">Enable suggestions</string>
     <string name="image_cache_cleared">Image cache cleared</string>
+    <string name="share_with">Share with</string>
+    <string name="filter">Filter</string>
 </resources>
