Feature: filter actual (excluding Category.WISHLIST) in SummaryFragment.kt

--- a/feature/summary/summary-ui/src/main/res/values/strings.xml
+++ b/feature/summary/summary-ui/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="total_books">Books: </string>
     <string name="total_documentaries">Documentaries: </string>
     <string name="no_data_found">No data found</string>
+    <string name="filter_actual_title">Filter Actual</string>
 </resources>
